fix z-index chat

--- a/src/components/common/Chat.css
+++ b/src/components/common/Chat.css
@@ -3,6 +3,7 @@
 	position: fixed;
 	bottom: 3%;
 	right: 3%;
+	z-index: 100;
 }
 
 #chatCon .chat-box {
